added section and fix major issue

--- a/index.html
+++ b/index.html
@@ -14,4 +14,6 @@ hide-from-google: false
 {% include hero.html %}
 {% include feature.html %}
 {% include menu.html %}
+{% include gallery.html %}
+{% include reserve.html %}
 {% include footer.html %}
